--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Workshop_App/URLInfo.json
 Workshop_App/userInfo.txt
 Workshop_App/workshops.db
 Workshop_App/__pycache__
+.vscode
+Workshop_App/.vscode
