--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Workshop_App/URLInfo.json
-Workshop_App/userInfo.txt
+Workshop_App/url_info.json
+Workshop_App/user_info.txt
 Workshop_App/workshops.db
 Workshop_App/__pycache__
 .vscode
