Refactoring and Sorted exported information.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 Workshop_App/connection_info.json
 Workshop_App/workshops.db
+Workshop_App/co_op_names.json
 Workshop_App/__pycache__
 .vscode
 Workshop_App/.vscode
-Workshop_App/Resources
