--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 Workshop_App/connection_info.json
 Workshop_App/workshops.db
+Workshop_App/workshops_test.db
 Workshop_App/co_op_names.json
 Workshop_App/__pycache__
 Workshop_App/google_info.json
